--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+@font-face {
+   font-family: Benguiat;
+   src: url("./fonts/BenguiatGothicStd-Bold.otf") format("opentype");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
