--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 hr {
