don't select text when dragging need bar

--- a/src/components/NeedsPanel/NeedsGrid/Need/style.scss
+++ b/src/components/NeedsPanel/NeedsGrid/Need/style.scss
@@ -11,5 +11,6 @@
   font-family: Benguiat;
   font-size: 25px;
   margin-bottom: -2px;
-  color: rgba(15, 24, 108, 1)
+  color: rgba(15, 24, 108, 1);
+  user-select: none;
 }
