gross blue gradient background

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #575fbc, #6d80c5);
 }
 
 code {
