--- a/src/App.scss
+++ b/src/App.scss
@@ -24,5 +24,7 @@ hr {
   font-size: 1.2em;
   padding: 5px 5px 0px 5px;
   font-family: "Benguiat", "Comic Sans", cursive;
+  border-radius: 5px;
+  background-color: rgb(132, 141, 200);
   color: #0f186c
 }
